text selection solved
text error resolved

--- a/Term1/templates/list.html
+++ b/Term1/templates/list.html
@@ -14,11 +14,10 @@
             <input type="text" name="tag" value="" />
             <input type="submit">
         </form>
-        <h3><strong>we can select from three of these.</strong></h3>
+        <h3><strong>we can select from two of these.</strong></h3>
 
         <h4>DB</h4>
         <h4>Text</h4>
-        <h4>Detail</h4>
 
         <button type="button" onclick="location.href='/'">Go back to registration</button>
     </ul>
@@ -65,7 +64,7 @@
         
     </div>
     <div id="default">
-        <h3>User list - Click to see more details about user.</h3>
+        <h3>User list.</h3>
         <div class=" box ">
             <ul>
                 {% for name in values %}
