--- a/react_django/Register_controller/frontend/templates/frontend/index.html
+++ b/react_django/Register_controller/frontend/templates/frontend/index.html
@@ -6,13 +6,13 @@
     <title>Error</title>
     {% load static %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel= "stylesheet" type= "text/css" href = "{% static "css/index.css" %}"
+    <link rel= "stylesheet" type= "text/css" href = "{% static 'css/index.css' %}"/>
 </head>
 <body>
     <div id = "main">
         <div id="app"></div>
     </div>    
 
-    <script src="{% static "frontend/main.js"%}"></script>
+    <script src="{% static 'frontend/main.js'%}"></script>
 </body>
 </html>
