--- a/react_django/Register_controller/frontend/templates/frontend/index.html
+++ b/react_django/Register_controller/frontend/templates/frontend/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id = "main">
         <div id="app"></div>
+        <div id="temp"></div>
     </div>    
 
     <script src="{% static 'frontend/main.js'%}"></script>
