--- a/react_django/Register_controller/frontend/templates/frontend/index.html
+++ b/react_django/Register_controller/frontend/templates/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
+    <title>UserRegister</title>
     {% load static %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel= "stylesheet" type= "text/css" href = "{% static 'css/index.css' %}"/>
