--- a/wineprediction/templates/wineweb.html
+++ b/wineprediction/templates/wineweb.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wine prediction</title>
 </head>
+<style>
+    body {cursor:default;} 
+</style>
 <body>
     
     <div>
@@ -15,20 +18,21 @@
         {% if data is not defined %}
         <div id= "Input">
         <form action="/wine" method="post">
-            <input type="text" name="alcohol">Alcohol(8~15)</input>
+            <input type="text" name="alcohol"> Alcohol(8~15)</input>
             <br>
-            <input type="text" name="pH">pH(2.5~4.5)</input>
+            <input type="text" name="pH"> pH(2.5~4.5)</input>
             <br>
-            <input type="text" name="sulphates">Sulphates(0~2)</input>
+            <input type="text" name="sulphates"> Sulphates(0~2)</input>
             <br>
+            <input type="radio" name="wine" value="red">Red Wine</input>
+            <input type="radio" name="wine" value="white">White Wine</input>
             <input type="submit" value="submit"/>
         </form>
         {% endif %}
         </div>
         <div id="display">
             {% if data is defined %}
-                <h4>The expected value is{{data}}</h4>
-
+                <h4>The expected value is {{data}}</h4>
                 <button type="button" onclick="location.href='/'">Go back</button>
 	        {% endif %}
         </div>
