--- a/wineprediction/templates/wineweb.html
+++ b/wineprediction/templates/wineweb.html
@@ -18,15 +18,26 @@
         {% if data is not defined %}
         <div id= "Input">
         <form action="/wine" method="post">
+            <input type="radio" id="radiobtn" name="wine" value="red" onclick="redcheck()">Red Wine</input>
+            <input type="radio" id="radiobtn" name="wine" value="white" onclick="whitecheck()">White Wine</input>
+            <br>
             <input type="text" name="alcohol"> Alcohol(8~15)</input>
             <br>
+            <div id= "red" style="display:none">
             <input type="text" name="pH"> pH(2.5~4.5)</input>
             <br>
             <input type="text" name="sulphates"> Sulphates(0~2)</input>
             <br>
-            <input type="radio" name="wine" value="red">Red Wine</input>
-            <input type="radio" name="wine" value="white">White Wine</input>
-            <input type="submit" value="submit"/>
+            </div>
+            <div id="white" style="display:none">
+            <input type="text" name="density"> Density</input>
+            <br>
+            <input type="text" name="chlorides">chlorides</input>
+            <br>
+            </div>
+            <div id="dynamic" style="display:none">
+                <input type='submit'></input>
+            </div>
         </form>
         {% endif %}
         </div>
@@ -38,22 +49,19 @@
         </div>
         
     </div>
-    <script> 
-        /*
-        $.ajax({
-            type:'get',
-            url:'/wine',
-            data:{},
-            success: (data)=>{
-                let resultDiv = document.createElement("div");
-                let winedata = document.createTextNode(data['score']);
-                resultDiv.appendChild(winedata);
-
-                let loc = document.getElementById('display');
-                loc.body.innnerHTML+=resultDiv;
-            }
-        })
-        */
+    <script>
+        function redcheck(){
+            document.getElementById("dynamic").style.display = "block";
+            document.getElementById("red").style.display ="block";
+            document.getElementById("white").style.display ="none";
+        }
+        function whitecheck(){
+            document.getElementById("dynamic").style.display = "block";
+            document.getElementById("red").style.display ="none";
+            document.getElementById("white").style.display ="block";
+        }   
+         </script>
+        
     </script>
 
 </body>
